# bocal-dinamico-esp32

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_PERFORMANCE_VERIFICATION.md  config.json  flash.sh  partitions.csv  relatorio_analise_projeto.md  sdkconfig  sdkconfig.defaults  sdkconfig.old  task_Tmr_Svc.md  task_sys_evt.md
docs/: task_ipc0_ipc1.md  task_tiT.md
docs/FC_MODBUS_mightyZAP-User-Manual_ENG_23H08_V3.4/: FC_MODBUS_mightyZAP-User-Manual_ENG_23H08_V3.4_Optimized-1.html  FC_MODBUS_mightyZAP-User-Manual_ENG_23H08_V3.4_Optimized-10.html  FC_MODBUS_mightyZAP-User-Manual_ENG_23H08_V3.4_Optimized-11.html  FC_MODBUS_mightyZAP-User-Manual_ENG_23H08_V3.4_Optimized-12.html  FC_MODBUS_mightyZAP-User-Manual_ENG_23H08_V3.4_Optimized-13.html  FC_MODBUS_mightyZAP-User-Manual_ENG_23H08_V3.4_Optimized-14.html  FC_MODBUS_mightyZAP-User-Manual_ENG_23H08_V3.4_Optimized-15.html  (+24 more)
main/: CMakeLists.txt  main.c
main/config/: config_manager.c  config_manager.h
main/health/: health_monitor.c  health_monitor.h
main/mightyzap/: mightyzap.c  mightyzap.h
main/modbus/: modbus_rtu.c  modbus_rtu.h
main/rs485/: rs485_driver.c  rs485_driver.h
main/webserver/: web_server.c  web_server.h
main/wifi/: wifi_manager.c  wifi_manager.h
main/www/: app.js  core.js  index.html  style.css
main/www/tabs/: actuators.html  actuators.js  config.html  config.js  files.html  files.js  ledmodbus.html  ledmodbus.js  system.html  system.js  tasks.html  tasks.js
